--- a/src/style.css
+++ b/src/style.css
@@ -113,8 +113,9 @@ html, body {
 /*** THEME / CSS VARIABLES ***/
 
 :root {
-  --color-white: rgb(245, 243, 244);
-  --color-blue:  rgb(25, 34, 49);
+  --color-main-grey: rgb(31, 31, 31);
+  --color-sidebar-black:  rgb(0, 0, 0);
+  --color-text-white: rgb(223, 219, 216);
 }
 
 
@@ -126,22 +127,22 @@ a {
 
 body {
   font-family: 'Poppins';
+  background-color: var(--color-main-grey);
 }
 
 /*** SIDEBAR ***/
 
 .sidebar {
-  width: 20%;
-  height: calc(100vh - 2rem);
+  width: max-content;
+  height: 100vh;
   padding: 1rem;
-  margin: 1rem;
 
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
 
-  background-color: var(--color-blue);
-  border-radius: 50px;
+  background-color: var(--color-sidebar-black);
 }
 
 
@@ -171,13 +172,13 @@ body {
 }
 
 .menu-item { 
-  color: var(--color-white); 
+  color: var(--color-text-white); 
 }
 
 .menu-item-icon {
   aspect-ratio: 1 / 1;
   height: 1.2rem;
-  color: var(--color-white);
+  color: var(--color-text-white);
 }
 
 
@@ -191,7 +192,7 @@ body {
   padding-bottom: 0.5rem;
   line-height: 1rem;
 
-  color: var(--color-white);
+  color: var(--color-text-white);
 }
 
 .account-profile-img {
