--- a/src/style.css
+++ b/src/style.css
@@ -113,8 +113,8 @@ html, body {
 /*** THEME / CSS VARIABLES ***/
 
 :root {
-  --color-main-grey: rgb(31, 31, 31);
-  --color-sidebar-black:  rgb(0, 0, 0);
+  --color-background-grey: rgb(31, 31, 31);
+  --color-main-black:  rgb(0, 0, 0);
   --color-text-white: rgb(223, 219, 216);
 }
 
@@ -127,22 +127,28 @@ a {
 
 body {
   font-family: 'Poppins';
-  background-color: var(--color-main-grey);
+  background-color: var(--color-background-grey);
+}
+
+#app {
+  display: flex;
 }
 
 /*** SIDEBAR ***/
 
 .sidebar {
-  width: max-content;
-  height: 100vh;
+  width: 8%;
+  height: calc(100vh - 2rem);
   padding: 1rem;
+  margin: 1rem;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 
-  background-color: var(--color-sidebar-black);
+  background-color: var(--color-main-black);
+  border-radius: 100px;
 }
 
 
@@ -172,6 +178,10 @@ body {
 }
 
 .menu-item { 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color: var(--color-text-white); 
 }
 
@@ -213,4 +223,19 @@ body {
 
 .account-profile-email {
   font-size: .75rem;
+}
+
+
+/*** DASHBOARD ***/
+
+.dashboard-container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  width: 90%;
+  height: calc(100vh - 2rem);
+  padding: 1rem;
+  margin: 1rem;
+
+  background-color: var(--color-main-black);
+  border-radius: 100px;
 }
