--- a/src/style.css
+++ b/src/style.css
@@ -121,7 +121,7 @@ body { font-family: 'Poppins'; background-color: var(--color-background-grey); }
   justify-content: space-between;
 
   background-color: var(--color-main-black);
-  border-radius: 100px;
+  border-radius: 75px;
 }
 
 
@@ -212,9 +212,17 @@ body { font-family: 'Poppins'; background-color: var(--color-background-grey); }
   padding: 2rem;
 }
 
+.dashboard-balance-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
 .balance-header, .balance-number { margin: 0; line-height: 4rem;}
 
 .balance-header {
+  margin: 0;
+  line-height: 2;
   font-size: 1rem;
   color: var(--color-text-grey);
 }
@@ -226,4 +234,27 @@ body { font-family: 'Poppins'; background-color: var(--color-background-grey); }
 .balance-number span {
   color: var(--color-text-grey);
   font-size: 3rem;
+}
+
+.balance-trend {
+  display: flex;
+  align-items: center;
+  background-color: rgb(102, 148, 113);
+  
+  width: max-content;
+  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+  gap: 0.5rem;
+
+  border-radius: 10px;
+}
+
+.balance-trend-icon {
+  display: block;
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.balance-trend-value {
+  margin: 0;
+  line-height: 1; 
 }
