--- a/src/style.css
+++ b/src/style.css
@@ -210,7 +210,7 @@ body { font-family: 'Poppins'; background-color: var(--color-background-grey); }
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  gap: 2rem;
+  gap: 1rem;
 
   color: var(--color-text-white);
 }
@@ -299,6 +299,12 @@ body { font-family: 'Poppins'; background-color: var(--color-background-grey); }
   display: block;
   padding: 0.5rem;
   border: 1px solid black;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
+.card-pct-change-container {
+  border: 2px solid black;
+  width: max-content;
+  border-radius: 8px;
+  padding: 0.25rem;
+}
