--- a/src/style.css
+++ b/src/style.css
@@ -215,6 +215,15 @@ body { font-family: 'Poppins'; background-color: var(--color-background-grey); }
   color: var(--color-text-white);
 }
 
+.dashboard-container-right {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  gap: 1rem;
+
+  color: var(--color-text-white);
+}
+
 /*** DASHBOARD BALANCE ***/
 
 .dashboard-balance-container {
@@ -223,16 +232,16 @@ body { font-family: 'Poppins'; background-color: var(--color-background-grey); }
   gap: 0.5rem;
 }
 
-.balance-header, .balance-number { margin: 0; line-height: 4rem;}
+.dashboard-header, .balance-number { margin: 0; line-height: 4rem;}
 
-.balance-header {
+.dashboard-header {
   margin: 0;
   line-height: 2;
   font-size: 1rem;
   color: var(--color-text-grey);
 }
 
-.balance-number { font-size: 4rem; }
+.balance-number { font-size: 3rem; }
 
 .balance-number span { color: var(--color-text-grey); font-size: 3rem; }
 
@@ -274,9 +283,11 @@ body { font-family: 'Poppins'; background-color: var(--color-background-grey); }
 .crypto-card {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   padding: 1rem;
   border-radius: 30px;
-  gap: 1rem;
+  gap: 2rem;
+  width: 25%;
 }
 
 .card-info-container {
@@ -302,9 +313,44 @@ body { font-family: 'Poppins'; background-color: var(--color-background-grey); }
   border-radius: 15px;
 }
 
+.card-name {
+  font-size: 1.5rem;
+}
+
+.card-price {
+  font-size: 1.5rem;
+}
+
 .card-pct-change-container {
   border: 2px solid black;
   width: max-content;
   border-radius: 8px;
   padding: 0.25rem;
+}
+
+/*** DASHBOARD INSIGHTS ***/
+
+.dashboard-insights-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.dashboard-insights-content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+}
+
+.dashboard-header {
+  margin: 0;
+  line-height: 2;
+}
+
+.dashboard-insights-content {
+  width: 85%;
+  height: auto;
+  border: 1px solid white;
+  border-radius: 10px;
 }
